# depthai-ros

depthai-ros/: package.xml
depthai_descriptions/launch/: urdf_launch.py
depthai_examples/: package.xml
depthai_examples/launch/: panoptes_baseline.launch.py
depthai_examples/src/: tracker_yolov4_spatial_publisher.cpp
depthai_ros_driver/: CMakeLists.txt  package.xml
depthai_ros_driver/config/nn/: yolo.json
depthai_ros_driver/launch/: camera_with_namespace.launch.py
depthai_ros_driver/src/dai_nodes/: base_node.cpp
depthai_ros_driver/src/param_handlers/: nn_param_handler.cpp
